--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi Primer Paralax</title>
+  <link rel="stylesheet" type="text/css" href="fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <div class="bg-1">
+    <div class="chevron-container">
+			<i class="chevron-down fas fa-chevron-down"></i>
+			<i class="chevron-down fas fa-chevron-down"></i>
+			<i class="chevron-down fas fa-chevron-down"></i>
+		</div>
+  </div>
+  <div class="paragraph">
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Culpa consectetur harum libero atque dolorem! Qui,
+      doloremque ab fugit quasi recusandae perspiciatis illum a reprehenderit beatae similique dolorem sit accusantium natus.
+		</p>
+	</div>
+	<div class="bg-2"></div>
 </body>
 </html>
