--- a/index.html
+++ b/index.html
@@ -18,10 +18,23 @@
   </div>
   <div class="paragraph">
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-      Culpa consectetur harum libero atque dolorem! Qui,
-      doloremque ab fugit quasi recusandae perspiciatis illum a reprehenderit beatae similique dolorem sit accusantium natus.
+			Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Est nostrum deleniti quisquam, eius architecto obcaecati,
+      tempora itaque accusantium quasi ex fugit.
+      Voluptatibus quidem corrupti quos laborum vitae veniam molestias quisquam quasi,
+      laudantium soluta reiciendis. Cum officiis expedita quo deserunt,
+      dolorum, provident molestias nisi repellat, sunt nemo eius eligendi ab qui?
 		</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Ad sint ab praesentium necessitatibus tempore cum nobis id temporibus rerum placeat.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+      Possimus sequi delectus recusandae,
+      architecto blanditiis ad veniam culpa earum,
+      asperiores doloremque atque voluptate,
+      cumque deleniti non facilis tempora exercitationem facere et?</p>
 	</div>
 	<div class="bg-2"></div>
 </body>
